--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "angular-font-awesome": "^3.1.2",
+    "font-awesome": "^4.7.0",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.6.0",
+    "ngx-bootstrap": "^8.0.0",
+    "ngx-order-pipe": "^2.2.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
